src/FinancialForce Accounting/objects/codaBalanceUpdateResult__c.object
<CustomObject>
    <fields>
        <fullName>BalanceCreated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Balance Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BalanceNotUpdated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Balance not Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BalanceUpdated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Balance Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FromPeriodName__c</fullName>
        <label>From Period Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasFailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntersectDefinitionName__c</fullName>
        <label>Intersect Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfTransactionLines__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Transaction Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToPeriodName__c</fullName>
        <label>To Period Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YearName__c</fullName>
        <label>Year Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>DEPRECATED: Balance Update Result</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Balance Update Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DEPRECATED: Balance Update Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>